<resources>
    <string name="app_name">Car Check</string>
    <string name="enter_reg">Enter reg</string>
    <string name="history_sheet_title">Lookup History</string>

    <string name="title_extra_info">Extra Info</string>
    <string name="title_calculators">Calculator | %s</string>

    <string name="title_journey">Journey Cost</string>
    <string name="title_fuel_cost">Fuel Cost</string>
    <string name="title_finance">Finance</string>

    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="colour">Colour</string>
    <string name="type">Type</string>
    <string name="bhp">BHP</string>
    <string name="engine_size">Engine Size</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="year">Year</string>

    <string name="moreinfo_header_general">General</string>
    <string name="moreinfo_header_tax">Tax</string>
    <string name="moreinfo_header_mot">MOT</string>
    <string name="moreinfo_header_emissions">Emissions</string>
    <string name="moreinfo_header_performance">Performance</string>
    <string name="moreinfo_header_fuel_economy">Fuel Economy</string>

    <string name="status">Status</string>
    <string name="days_left">Days Left</string>

    <string name="euro_status">Euro Status</string>
    <string name="v5c_issued">V5C Issued</string>
    <string name="registered_near">Registered</string>
    <string name="insurance_group">Insurance Group</string>

    <string name="cost_12_months">12 Months Cost</string>
    <string name="cost_6_months">6 Months Cost</string>
    <string name="output">Output</string>

    <string name="zeroTo60">0–60</string>
    <string name="top_speed">Top Speed</string>

    <string name="urban">Urban</string>
    <string name="extra_urban">Extra Urban</string>
    <string name="combined">Combined</string>

    <string name="empty_reg">Please enter a registration</string>
    <string name="invalid_plate">Invalid registration</string>
    <string name="no_data">No data found for the registration</string>
    <string name="empty_history">There is nothing in history right now</string>
    <string name="empty_saved">There are no saved vehicles yet</string>

    <string name="tooltip_lookup">Lookup registration</string>
    <string name="tooltip_clear">Clear lookup history</string>
    <string name="confirm_clear_history_title">Clear history?</string>
    <string name="confirm_clear_history_text">Do you want to clear lookup history?</string>
    <string name="tooltip_calcs">Useful calculators</string>
    <string name="tooltip_history">Lookup history</string>

    <string name="insufficient_vrm_info">There is not enough info for this VRM</string>

    <string name="distance">Distance</string>
    <string name="mpg">mpg</string>
    <string name="fuel_cost">Fuel cost</string>

    <string name="miles">miles</string>
    <string name="pence_litre">pence/Litre</string>
    <string name="cost_text">Cost: £%1$.2f</string>
    <string name="fuel_text">%1$.2f Litres</string>

    <string name="id_like_to_borrow">I\'d like to borrow:</string>
    <string name="price_text">£%1$,.2f</string>
    <string name="over_a_period_of">Over a period of:</string>
    <plurals name="period_text">
        <item quantity="one">1 month</item>
        <item quantity="other">%1$d months</item>
    </plurals>
    <string name="with_apr_of">With an APR of:</string>
    <string name="apr">APR</string>
    <string name="percent">%</string>
    <string name="summary">Summary</string>
    <string name="monthly_payment">Monthly repayment</string>
    <string name="total_payment">Total repayment</string>

    <string name="an_error_occurred">An error occurred</string>
    <string name="null_info">The info object cannot be null</string>

    <string name="vehicle_type">Vehicle type</string>

    <!-- Eg 2010 Audi A3, Blue, 1390cc, Petrol -->
    <string name="saved_info">%1$s %2$s %3$s, %4$s, %5$s, %6$s</string>
    <string name="saved_vehicles_title">Saved vehicles</string>
    <string name="saved_vehicles_body">These are your saved vehicles. Any changes to the vehicle information will be updated on next search.</string>

    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
</resources>
