<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <net.lyxnx.carcheck.widgets.FinanceDisplayItem
            android:id="@+id/cost_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/id_like_to_borrow"
            app:min="1"
            app:max="25"/>

        <net.lyxnx.carcheck.widgets.FinanceDisplayItem
            android:id="@+id/period_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/over_a_period_of"
            app:min="12"
            app:max="60"/>

        <net.lyxnx.carcheck.widgets.FinanceDisplayItem
            android:id="@+id/apr_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/with_apr_of"
            app:is_seekbar="false"
            app:hint="@string/apr"
            android:inputType="numberDecimal"
            app:display="%" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            style="@style/MiniTitle"
            android:text="@string/summary" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center">

            <net.lyxnx.carcheck.widgets.InfoTableRow
                android:id="@+id/monthly_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/monthly_payment" />

            <net.lyxnx.carcheck.widgets.InfoTableRow
                android:id="@+id/total_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/total_payment" />

        </TableLayout>

    </LinearLayout>
</ScrollView>