<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input"
        style="@style/PlateInput"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:hint="@string/enter_reg"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCalculators"
            style="@style/IconButton"
            android:background="@drawable/ic_calculator"
            android:tooltipText="@string/tooltip_calcs" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonHistory"
            style="@style/IconButton"
            android:background="@drawable/ic_history"
            android:tooltipText="@string/tooltip_history" />

        <Button
            android:id="@+id/buttonGo"
            style="@style/IconButton"
            android:background="@drawable/ic_tick"
            android:tooltipText="@string/tooltip_lookup" />

    </LinearLayout>

    <include layout="@layout/progress_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
